@@ -3,6 +3,7 @@ x.x:
 
 - fixed: incorrect context in index_blog widget
 - fixed: blog widget more link in widget
+- fixed: deprecated notices in combination with widget_manager
 
 2.2 (2012-03-02):
 
